# trivium

./: .env  ARCHITECTURE_GAP_ANALYSIS.md  BLOCKQUOTE_DEBUG_SUMMARY.md  BLOCKQUOTE_READ_HIGHLIGHTING_FIX.md  BROWSER_CHECKLIST.md  CARD_ENUMERATION_CHECKLIST.md  CARD_ENUMERATION_DESIGN.md  CARD_ENUMERATION_EXAMPLES.md  CLAUDE.md  CONTENTEDITABLE_RESEARCH.md  CREATE_CARDS_INTEGRATION_SUMMARY.md  CROSS_PLATFORM_ARCHITECTURE.md  CROSS_PLATFORM_GUIDE.md  CROSS_PLATFORM_IMPLEMENTATION.md  CROSS_PLATFORM_SUMMARY.md  DATABASE_SETUP.md  DEBUGGING_ROADMAP.md  DEBUGGING_SUMMARY.md  DEBUG_CONSOLE_LOGS.md  DEBUG_GUIDE.md  DEBUG_IMPLEMENTATION_SUMMARY.md  DEBUG_TEST_PLAN.md  DOCUMENTATION_INDEX.md  EXECUTION_CHAIN_DIAGRAM.md  EXECUTION_PATH_DEBUG.md  FEATURES.md  FEATURES_BULLETS.md  FEATURES_SHORT.md  FLASHCARD_CREATION_HUB_DESIGN.md  FLASHCARD_HUB_QUICK_REFERENCE.md  FLASHCARD_HUB_VISUAL_STATES.md  FLASHCARD_MANAGER_PLAN.md  FOCUS_TRACKING_DESIGN.md  FOCUS_VISUAL_FEEDBACK_DESIGN.md  FRONTEND_SETUP.md  FRONTEND_STRUCTURE.md  GUI_REDESIGN_COMPLETE.md  GUI_REDESIGN_PLAN.md  HOTKEY_CUSTOMIZATION_DESIGN.md  HOTKEY_MIGRATION_PLAN.md  (+75 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  trivium_dev.db
src-tauri/.sqlx/: query-011210195552ca9cf8091b9a71ddd25a9bfd486ec90a19dfa0209650404a4d7c.json  query-01e74e67cab3511d8cb14e3e7344783cecc34c9d5d0a28afb92af157647e07be.json  query-02f6dd2180e346576a44b4d61689e288bd05dc3d4f4de60755b5078c485535d6.json  query-0528f97e9472412f66fce4daa9173a4992ab6ac7340e9e71d21112528a86e7a4.json  query-0bc0b3c717173fac697017d28a15be56abeab24eaccc1cedebc49e9cd1d8da11.json  (+169 more)
src-tauri/migrations/: 20241012000000_initial_schema.sql  (+20 more)
(+222 files in other folders)
